--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "Binance arbitrage app",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "engineStrict": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SirSagramor/arbitrage.git"
